[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.1"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.8.0"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"